[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Wall.png" type="Texture" id=1]
[ext_resource path="res://L1P2.tscn" type="PackedScene" id=2]
[ext_resource path="res://L1P1.tscn" type="PackedScene" id=3]
[ext_resource path="res://L1map.gd" type="Script" id=4]
[ext_resource path="res://assets/SFX/winP1.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/SFX/winP2.ogg" type="AudioStream" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/Floor.png-1986a68a011c9d9847f815defae65829.stex"

[sub_resource type="TileSet" id=3]
0/name = "Wall.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Floor.png 1"
1/texture = SubResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 253.757, 186.353 )

[node name="TileMap" type="TileMap"]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 3 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 131071, 0, 0, 65540, 1, 0, 65545, 1, 0, 65550, 1, 0, 65554, 1, 0, 65557, 1, 0, 65560, 1, 0, 65564, 1, 0, 65567, 1, 0, 65571, 1, 0, 65576, 0, 0, 196607, 0, 0, 131076, 1, 0, 131081, 1, 0, 131086, 1, 0, 131090, 1, 0, 131093, 1, 0, 131096, 1, 0, 131100, 1, 0, 131103, 1, 0, 131107, 1, 0, 131112, 0, 0, 262143, 0, 0, 196612, 1, 0, 196617, 1, 0, 196622, 1, 0, 196626, 1, 0, 196629, 1, 0, 196632, 1, 0, 196636, 1, 0, 196639, 1, 0, 196643, 1, 0, 196648, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 393215, 0, 0, 327684, 1, 0, 327689, 1, 0, 327694, 1, 0, 327698, 1, 0, 327701, 1, 0, 327704, 1, 0, 327708, 1, 0, 327711, 1, 0, 327715, 1, 0, 327720, 0, 0, 458751, 0, 0, 393220, 1, 0, 393225, 1, 0, 393230, 1, 0, 393234, 1, 0, 393237, 1, 0, 393240, 1, 0, 393244, 1, 0, 393247, 1, 0, 393251, 1, 0, 393256, 0, 0, 524287, 0, 0, 458756, 1, 0, 458761, 1, 0, 458766, 1, 0, 458770, 1, 0, 458773, 1, 0, 458776, 1, 0, 458780, 1, 0, 458783, 1, 0, 458787, 1, 0, 458792, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0 )
script = ExtResource( 4 )

[node name="P1goal" type="Area2D" parent="."]

[node name="P1Gcol" type="CollisionShape2D" parent="P1goal"]
position = Vector2( 4864.6, 318.113 )
shape = SubResource( 4 )

[node name="P1win" type="AudioStreamPlayer" parent="P1goal"]
stream = ExtResource( 5 )

[node name="P2goal" type="Area2D" parent="."]

[node name="P2Gcol" type="CollisionShape2D" parent="P2goal"]
position = Vector2( 4864.6, 827.994 )
shape = SubResource( 4 )

[node name="P2win" type="AudioStreamPlayer" parent="P2goal"]
stream = ExtResource( 6 )

[node name="P1" parent="." instance=ExtResource( 3 )]
position = Vector2( 137.811, 328.51 )
scale = Vector2( 2, 2 )

[node name="Camera2D" type="Camera2D" parent="P1"]

[node name="P2" parent="." instance=ExtResource( 2 )]
position = Vector2( 136.366, 845.084 )
scale = Vector2( 2, 2 )

[node name="Camera2D" type="Camera2D" parent="P2"]

[node name="SwitchTime" type="Timer" parent="."]
wait_time = 2.6
one_shot = true
[connection signal="area_entered" from="P1goal" to="." method="_on_P1goal_area_entered"]
[connection signal="area_entered" from="P2goal" to="." method="_on_P2goal_area_entered"]
[connection signal="timeout" from="SwitchTime" to="." method="_on_SwitchTime_timeout"]
